--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ a:hover, a:focus, a:active {
  */
 h1, h2, h3, h4, h5, h6, .h01, .h02, .h03, .h04, .h05, .h06 {
 	font-family: "poppins-semibold", sans-serif;
-	color: #313131;
+	color: #fff;
 	font-style: normal;
 	text-rendering: optimizeLegibility;
 	margin-bottom: 2.1rem;
@@ -127,7 +127,7 @@ h1, .h01 {
 	}
 }
 h2, .h02 {
-	font-size: 2.4rem;
+	font-size: 7.1rem;
 	line-height: 1.25;
 }
 h3, .h03 {
@@ -2613,7 +2613,7 @@ footer .copyright span:last-child::after {
 /*HECHO POR MI*/
 .main-title {
 	display: flex;
-   align-items:center;
+   	align-items:center;
 }
 
 /*# sourceMappingURL=main.css.map */
